[feat] #39 좋아요 취소 기능 추가 및 작품 리스트 조회 res 수정
